--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.3",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "openai": "^6.9.1",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-share": "^5.2.2",
     "sharp": "^0.34.5",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
